--- a/packages/formulize/style/formulize.scss
+++ b/packages/formulize/style/formulize.scss
@@ -1,6 +1,8 @@
-.formulize-wrapper {
+$base: formulize;
+
+.#{$base}-wrapper {
   position: relative;
-  .formulize-text {
+  .#{$base}-text {
     opacity: 0;
     color: transparent;
     position: absolute;
@@ -13,12 +15,12 @@
     z-index: 20;
   }
 
-  .formulize-container {
+  .#{$base}-container {
     padding: 40px;
     cursor: text;
     position: relative;
     line-height: 2.8;
-    .formulize-drag {
+    .#{$base}-drag {
       display: inline;
       margin-top: -4px;
       padding: 12px 0;
@@ -26,7 +28,7 @@
       vertical-align: middle;
       background-color: rgba(26, 94, 255, 0.15);
     }
-    .formulize-cursor {
+    .#{$base}-cursor {
       display: inline-block;
       vertical-align: middle;
       @apply h-5;
@@ -35,7 +37,7 @@
       @apply dark:bg-white/70;
       animation: blink 0.5s ease alternate infinite;
     }
-    .formulize-item {
+    .#{$base}-item {
       @apply inline;
       vertical-align: middle;
       padding: 4px 10px;
@@ -47,16 +49,16 @@
       @apply relative;
       overflow: hidden;
     }
-    .formulize-operator {
+    .#{$base}-operator {
       color: #f6474e;
     }
-    .formulize-bracket {
+    .#{$base}-bracket {
       @apply bg-transparent;
       color: #12c2b7;
     }
   }
 
-  .formulize-alert {
+  .#{$base}-alert {
     @apply absolute;
     @apply w-[140px];
     height: 42px;
@@ -71,21 +73,21 @@
     @apply top-0;
     @apply right-1;
     @apply z-10;
-    &.formulize-alert-good {
+    &.#{$base}-alert-good {
       color: #88ccab;
       border-top-color: #88ccab;
     }
-    &.formulize-alert-error {
+    &.#{$base}-alert-error {
       color: #ff9090;
       border-top-color: #ff9090;
     }
   }
 
-  .formulize-prefix {
+  .#{$base}-prefix {
     color: rgba(0, 0, 0, 0.7);
   }
 
-  .formulize-suffix {
+  .#{$base}-suffix {
     color: rgba(0, 0, 0, 0.3);
   }
 }
